Major refactoring of the menu again. This should fix several issues:
*) Graphics not displaying on certain resolutions.
*) Icons for completion not aligned.
*) Weird scrolling behavior when opening the sidenav - it now smoothly scrolls to exactly where you would expect.
*) Highlighting of the wrong active element when going from certain elements to certain others.

Fixes #96, fixes #89, fixes #84.

--- a/FrontEnd/src/app/treeview/tree-view.component.css
+++ b/FrontEnd/src/app/treeview/tree-view.component.css
@@ -3,16 +3,6 @@
   background: rgba(0,0,0,.1) !important;
 }
 
-mat-slide-toggle {
-  padding: .75em;
-  font-size: 14px;
-  font-weight: 400;
-}
-
-.special:not(:hover) {
-  background: rgba(0,0,0,0) !important;
-}
-
 .pointer {
   cursor: pointer;
 }
